@@ -90,9 +90,13 @@
     * Added the Sys::Signal::Handler::SIG_DFL class.
     * Added the Sys::Signal::Handler::SIG_IGN class.
     * Added the Sys::Signal::Handler::SIG_ERR class.
+    * Added the Sys::Signal::Handler::SIG_MONITOR class.
       
   [Incompatible Changes]
     * The kill method in the Sys::Process class is moved to the Sys::Signal.
+    * The alarm and ualarm method is added to the Sys::Signal class. This was removed from the Sys::Process class at 0.23(2022-11-01)
+      native static method alarm : int ($seconds : int);
+      native static method ualarm : int ($usecs : int, $interval : int);
 0.23 2022-11-01
   [Bug Fix]
     * Fixed the bug that the get_osname method in the Sys class returned "sunos", not "solaris" in Soralis.
